[package]
name = "pdf-localisator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
clap = { version = "4.4.7", features = ["derive"] }
reqwest = {version = "0.11.21", features = ["blocking", "json"]}
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
rustls = "0.21.8"
serde = { version = "1.0", features = ["derive"] }
